<resources>
    //
    <string name="app_name">SavvySavingAppWorking</string>
    <string name="welcome_to_savvy_saving_app">Welcome To Savvy</string>
    <string name="please_select_your_4_digit_pin">Please Enter Your 4-Digit Pin</string>
    <string name="confirm">Confirm</string>
    <string name="welcome_to_savvy">Welcome to Savvy</string>

    <string-array name="period_arrays">
        <item>Week</item>
        <item>Fortnight</item>
        <item>Month</item>
    </string-array>

    <string-array name="categories">
        <item>Food</item>
        <item>Drink</item>
        <item>Electricity</item>
        <item>Rent</item>
        <item>Transport</item>
        <item>Petrol</item>
        <item>Phone</item>
        <item>Gym</item>
        <item>Miscellaneous</item>
        <item>Clothing</item>
        <item>Water</item>
    </string-array>
    <string name="title_activity_start_screen">StartScreen</string>
    <string name="first_time_click_here_to_set_up">First time? Click here to set up!</string>
    <string name="you_have_3_attempts_left">You have 3 attempts left</string>
    <string name="already_set_up_go_log_in">Already set up? Go log in!</string>
    <string name="enter_your_finance_details">Enter Your Finance Details</string>
    <string name="set_your_daily_budget">Set Your Daily Budget</string>
    <string name="it_must_be_less_than_your_income">It must be less than your income!</string>
    <string name="income">Income</string>
    <string name="next">Next</string>
    <string name="how_much_will_you_commit">How much will you commit?</string>
    <string name="set_a_saving_goal">Set a Saving Goal</string>
    <string name="target_date">Target Date?</string>
    <string name="pledge_amount">Pledge Amount</string>
    <string name="saving_goal">Saving Goal</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="enter_your_income">Enter your Income</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <string name="settings">Settings: </string>
    <string name="pref_settings_savings">Change savings goal</string>
    <string name="pref_settings_changeIncome">Change your income</string>
    <string name="changeSettings">Change Values</string>
    <string name="income_period">Income Period</string>
    <string name="pledge_deduction">Pledge Deduction</string>-->

    <string name="pref_settings_savings_default_value">SavingSetup PUT HERE</string>


    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

</resources>
